# SEPA-pipeline

./: .flake8  .gitignore  AGENT.md  README.md  commit.txt  docker-compose.yml  improvement.txt  main.py  pre-commit.sh  pyproject.toml  requirements.txt  scrape.py  scraper.py
agent/: __init__.py  agent.py  observability.py  sepa_agent.py  shopping_prompts.py
agent/api/: __init__.py  app.py  cli.py  routes.py  schemas.py
agent/tests/: test_api.py  test_observability.py  test_sepa_agent_events.py
agent/tools/mcp/lakehouse_mcp/: main.py  server.py  stdio.py
agent/tools/mcp/lakehouse_mcp/clients/: duckdb.py  iceberg.py
agent/tools/mcp/lakehouse_mcp/tools/: catalog.py  query.py
dbt/: .user.yml  profiles.yml
dbt/sepa_analytics/: dbt_project.yml
dbt/sepa_analytics/macros/: categorize_product.sql  iceberg_source.sql
dbt/sepa_analytics/models/: test_model.sql
dbt/sepa_analytics/models/gold/: gold_cross_price_elasticity.sql  gold_price_hypothesis.sql  gold_price_timeseries.sql  gold_schema.yml  schema.yml
dbt/sepa_analytics/models/marts/: mart_daily_price_summary.sql  mart_store_coverage.sql  marts_schema.yml
dbt/sepa_analytics/models/staging/: schema.yml  sources.yml  stg_dim_comercios.sql  stg_dim_productos.sql  stg_dim_sucursales.sql  stg_precios.sql
dbt/sepa_analytics/tests/: assert_dim_comercios_current_unique.sql  assert_dim_sucursales_current_unique.sql  assert_fct_price_quotes_grain.sql  assert_gold_price_timeseries_grain.sql
mcp/lakehouse_mcp/: __init__.py  config.py  main.py  server.py  stdio.py
mcp/lakehouse_mcp/clients/: __init__.py  duckdb.py  iceberg.py
mcp/lakehouse_mcp/tools/: __init__.py  catalog.py  query.py
mcp/tests/: test_mcp_asgi.py  test_query_tools.py  test_tools_direct.py
sepa_pipeline/: main.py
sepa_pipeline/utils/: logger_config.py
sql/: analytics.sql  init.sql
src/sepa_pipeline/: config.py  extractor.py  loader.py  main.py  manage_iceberg.py  pipeline.py  schema.py  scraper.py  validator.py
src/sepa_pipeline/loaders/: __init__.py  base.py  bigquery_loader.py  bronze_audit.py  iceberg_loader.py  parquet_loader.py  postgres_loader.py
src/sepa_pipeline/utils/: bootstrap_lakehouse.py  fecha.py  logger.py  logger_config.py  query_iceberg.py  reset_iceberg.py  scan_bronze_dates.py  setup_bigquery.py  verify_iceberg_count.py  verify_multi_date.py  verify_partition_count.py  verify_silver.py
tests/: __init__.py  conftest.py  factories.py  test_extractor.py  test_loader_buffer.py  test_main.py  test_parquet_loader.py  test_schema.py  test_scraper.py  test_validator.py
tests/test_utils/: __init__.py  test_fecha.py  test_logger.py
utils/: fecha.py  logger.py  logger_config.py
