[project]
name = "sepa-pipeline"
version = "0.1.0"
description = "Data pipeline for SEPA Dataset"
authors = [
    {name = "saens",email = "sabellamanjuan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]
